per attribute hashing